--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@hapi/basic": "^7.0.1",
     "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
+    "@hapi/vision": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.22.0",
@@ -24,13 +26,18 @@
     "log4js": "^6.9.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-jsdoc": "^6.2.8",
     "typeorm": "^0.3.16",
     "typescript": "^5.0.4",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/hapi__hapi": "^21.0.0",
-    "@types/node": "^20.1.3",
+    "@types/hapi__inert": "^5.2.6",
+    "@types/hapi__joi": "^17.1.9",
+    "@types/hapi__vision": "^5.5.4",
+    "@types/node": "^20.2.1",
+    "hapi-swagger": "^16.0.1",
     "keyv": "^4.5.2",
     "nodemon": "^2.0.22"
   }
